# khoca

./: .gitignore  MANIFEST.in  README.md  __init__.py  flake.nix  meson.build  pyproject.toml  setup.py
converters/: binToHuman.py  humanToBin.py  montesinos.py
src/khoca/: __init__.py  _version.py  khoca.py  meson.build
src/khoca/converters/: meson.build
src/khoca/data/: meson.build
src/pui/: meson.build
src/pui/planar_algebra/: coefficient_rings.h
