[build-system]
requires = [
  "cython",
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "khoca"
dynamic = ["version"]
dependencies = [
  "py",
]
authors = [
  {name = "Lukas Lewark", email = "lukas.lewark@math.ethz.ch"},
  {name = "Sebastian Oehms", email = "seb.oehms@gmail.com"}
]
maintainers = [
  {name = "Sebastian Oehms", email = "seb.oehms@gmail.com"}
]
description = "Calculate sl_N homology of knots"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
keywords = ["Knot theory", "Khovanov homology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://people.math.ethz.ch/~llewark/khoca.php"
Repository = "https://github.com/llewark/khoca/"

[project.scripts]
khoca = "khoca.khoca:main"
montesinos = "khoca.converters.montesinos:main"

[tool.cibuildwheel]
build = ["cp3*"]
archs = ["auto64"]
before-all = "sh before-all.sh"
before-build = "sh before-build.sh"
test-requires = ["py", "sympy", "database_knotinfo"]
test-command = "sh {project}/test-command.sh {project}"
