[build-system]
requires = [
  "cython",
  "meson-python",
]
build-backend = "mesonpy"

[project]
name = "khoca"
dynamic = ["version"]
dependencies = [
  "py",
]
authors = [
  {name = "Lukas Lewark", email = "lukas.lewark@math.ethz.ch"},
]
description = "Calculate sl_N homology of knots"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
keywords = ["Knot theory", "Khovanov homology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://people.math.ethz.ch/~llewark/khoca.php"
Repository = "https://github.com/llewark/khoca/"

[project.scripts]
khoca = "khoca.khoca:main"
